Fixed page overflow on mobile devices

--- a/website/src/overrides.css
+++ b/website/src/overrides.css
@@ -14,3 +14,7 @@
     left: auto;
     position: fixed;
 }
+
+.overflow {
+    overflow-x:auto;
+}
